--- a/detail.html
+++ b/detail.html
@@ -89,9 +89,42 @@
         </div>
   
     <!-- Topbar End -->
-
-
-   
+    <!-- Navbar Start -->
+    <div class="container-fluid">
+        <div class="row border-top px-xl-5">
+            <div class="col-lg-3 d-none d-lg-block">
+                <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 65px; margin-top: -1px; padding: 0 30px;">
+                    <h6 class="m-0" style="font-weight: bold; color: white;">Danh Mục Sản Phẩm</h6>
+                    <i class="fa fa-angle-down text-white"></i>
+                </a>
+                <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 1;">
+                    <div class="navbar-nav w-100 overflow-hidden" style="height: 287px">
+                        <div class="nav-item dropdown">
+                            <a href="./shop.html" class="nav-link" data-toggle="dropdown">Giày thể thao <i class="fa fa-angle-down float-right mt-1"></i></a>
+                            <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
+                                <a href="" class="dropdown-item">Giày đá bóng cỏ nhân tạo </a>
+                                <a href="" class="dropdown-item">Giày đá bóng cỏ tự nhiên</a>
+                                <a href="" class="dropdown-item">Giày futsal</a>
+                                <a href="" class="dropdown-item">Giày chạy bộ</a>
+                            </div>
+                        </div>
+                        <a href="./shop.html" class="nav-item nav-link">Áo khoác thể thao</a>
+                        <div class="nav-item dropdown">
+                            <a href="./shop.html" class="nav-link" data-toggle="dropdown">Quần áo thể thao <i class="fa fa-angle-down float-right mt-1"></i></a>
+                            <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
+                                <a href="./shop.html" class="dropdown-item">Quần áo câu lạc bộ</a>
+                                <a href="./shop.html" class="dropdown-item">Quần áo đội tuyển</a>
+                                <a href="./shop.html" class="dropdown-item">Quần áo đá bóng không logo</a>
+                                <a href="./shop.html" class="dropdown-item">Quần áo dài tay</a>
+                            </div>
+                        </div>
+                        <a href="./shop.html" class="nav-item nav-link">Phụ kiện thể thao</a>
+                        <a href="./shop.html" class="nav-item nav-link">Đồ bơi</a>
+                        <a href="./shop.html" class="nav-item nav-link">Cúp - Cờ lưu niệm</a>
+                        <a href="./shop.html" class="nav-item nav-link">Dụng cụ tập thể thao </a>
+                    </div>
+                </nav>
+            </div>
             <div class="col-lg-9">
                 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
                     <a href="" class="text-decoration-none d-block d-lg-none">
@@ -103,16 +136,13 @@
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
                             <a href="index.html" class="nav-item nav-link active ">Trang Chủ</a>
-                            <a href="shop.html" class="nav-item nav-link ">Giới Thiệu</a>
-                            <a href="detail.html" class="nav-item nav-link ">Tin Tức</a>
-                            <a href="contact.html" class="nav-item nav-link ">Khuyến Mãi</a>
-                            <a href="contact.html" class="nav-item nav-link">Hệ Thống Cửa hàng</a>
+                            <a href="" class="nav-item nav-link ">Giới Thiệu</a>
+                            <a href="" class="nav-item nav-link ">Tin Tức</a>
+                            <a href="" class="nav-item nav-link ">Khuyến Mãi</a>
+                            <a href="" class="nav-item nav-link">Hệ Thống Cửa hàng</a>
                         </div>
                     </div>
                 </nav>
-               
-                </div>
-            </div>
         </div>
     </div>
     <!-- Navbar End -->
