bach da sua form trong html

--- a/cart.html
+++ b/cart.html
@@ -24,7 +24,6 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 </head>
-
 <body>
       <!-- Topbar Start -->
       <div class="container-fluid">
@@ -176,6 +175,7 @@
                         </tr>
                     </thead>
                     <tbody class="align-middle">
+                        <!--Display product-->
                         <tr>
                             <td class="align-middle"><img src="img/product-1.jpg" alt="" style="width: 50px;"> Áo bóng đá MU 2022</td>
                             <td class="align-middle">$199.000đ</td>
