--- a/index.html
+++ b/index.html
@@ -203,7 +203,12 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                        <form action="">
+                            <input type="hidden" name="nameproduct" value="Áo đá bóng MU 2022">
+                            <input type="hidden" name="price" value="199999">
+                            <input type="hidden" name="image" value="product-1.ipg">
+                            <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -220,7 +225,12 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                        <form action="">
+                            <input type="hidden" name="nameproduct" value="Áo đá bóng Liverpoll 2022">
+                            <input type="hidden" name="price" value="199999">
+                            <input type="hidden" name="image" value="product-2.jpg">
+                            <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -237,7 +247,12 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                        <form action="">
+                            <input type="hidden" name="nameproduct" value="Áo đá bóng ManCity 2022">
+                            <input type="hidden" name="price" value="199999">
+                            <input type="hidden" name="image" value="product-3.jpg">
+                            <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -254,7 +269,12 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                        <form action="">
+                            <input type="hidden" name="nameproduct" value="Áo đá bóng Riki xanh 2022">
+                            <input type="hidden" name="price" value="199999">
+                            <input type="hidden" name="image" value="product-4.jpg">
+                            <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -271,7 +291,12 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                        <form action="">
+                            <input type="hidden" name="nameproduct" value="Áo đá bóng RIKI đỏ 2022">
+                            <input type="hidden" name="price" value="199999">
+                            <input type="hidden" name="image" value="product-5.jpg">
+                            <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -288,7 +313,12 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                        <form action="">
+                            <input type="hidden" name="nameproduct" value="Áo đá bóng PSG 2022">
+                            <input type="hidden" name="price" value="199999">
+                            <input type="hidden" name="image" value="product-6.jpg">
+                            <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -305,7 +335,12 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                        <form action="">
+                            <input type="hidden" name="nameproduct" value="Áo đá bóng Bayern Munich 2022">
+                            <input type="hidden" name="price" value="199999">
+                            <input type="hidden" name="image" value="product-7.jpg">
+                            <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -322,7 +357,12 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                        <form action="">
+                            <input type="hidden" name="nameproduct" value="Áo đá bóng Bulbal hồng 2022">
+                            <input type="hidden" name="price" value="199999">
+                            <input type="hidden" name="image" value="product-8.jpg">
+                            <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -376,7 +416,7 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</a>
+                        <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                     </div>
                 </div>
             </div>
@@ -394,7 +434,7 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</a>
+                        <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                     </div>
                 </div>
             </div>
@@ -412,7 +452,7 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>XemThêm</a>
-                        <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</a>
+                        <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                     </div>
                 </div>
             </div>
@@ -429,7 +469,7 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</a>
+                        <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                     </div>
                 </div>
             </div>
