--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <form action="">
+                        <form action="addproduct.php" method="post">
                             <input type="hidden" name="nameproduct" value="Áo đá bóng MU 2022">
                             <input type="hidden" name="price" value="199999">
                             <input type="hidden" name="image" value="product-1.ipg">
-                            <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                            <button type="submit" name="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                         </form>
                     </div>
                 </div>
@@ -225,11 +225,11 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <form action="">
+                        <form action="addproduct.php" method="post">
                             <input type="hidden" name="nameproduct" value="Áo đá bóng Liverpoll 2022">
                             <input type="hidden" name="price" value="199999">
                             <input type="hidden" name="image" value="product-2.jpg">
-                            <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                            <button type="submit" name="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                         </form>
                     </div>
                 </div>
@@ -247,11 +247,11 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <form action="">
+                        <form action="addproduct.php" method="post">
                             <input type="hidden" name="nameproduct" value="Áo đá bóng ManCity 2022">
                             <input type="hidden" name="price" value="199999">
                             <input type="hidden" name="image" value="product-3.jpg">
-                            <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                            <button type="submit" name="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                         </form>
                     </div>
                 </div>
@@ -269,11 +269,11 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <form action="">
+                        <form action="addproduct.php" method="post">
                             <input type="hidden" name="nameproduct" value="Áo đá bóng Riki xanh 2022">
                             <input type="hidden" name="price" value="199999">
                             <input type="hidden" name="image" value="product-4.jpg">
-                            <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                            <button type="submit" name="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                         </form>
                     </div>
                 </div>
@@ -291,11 +291,11 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <form action="">
+                        <form action="addproduct.php" method="post">
                             <input type="hidden" name="nameproduct" value="Áo đá bóng RIKI đỏ 2022">
                             <input type="hidden" name="price" value="199999">
                             <input type="hidden" name="image" value="product-5.jpg">
-                            <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                            <button type="submit" name="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                         </form>
                     </div>
                 </div>
@@ -313,11 +313,11 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <form action="">
+                        <form action="addproduct.php" method="post">
                             <input type="hidden" name="nameproduct" value="Áo đá bóng PSG 2022">
                             <input type="hidden" name="price" value="199999">
                             <input type="hidden" name="image" value="product-6.jpg">
-                            <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                            <button type="submit" name="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                         </form>
                     </div>
                 </div>
@@ -335,11 +335,11 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <form action="">
+                        <form action="addproduct.php" method="post">
                             <input type="hidden" name="nameproduct" value="Áo đá bóng Bayern Munich 2022">
                             <input type="hidden" name="price" value="199999">
                             <input type="hidden" name="image" value="product-7.jpg">
-                            <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                            <button type="submit" name="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                         </form>
                     </div>
                 </div>
@@ -357,11 +357,11 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <form action="">
+                        <form action="addproduct.php" method="post">
                             <input type="hidden" name="nameproduct" value="Áo đá bóng Bulbal hồng 2022">
                             <input type="hidden" name="price" value="199999">
                             <input type="hidden" name="image" value="product-8.jpg">
-                            <button type="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
+                            <button type="submit" name="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                         </form>
                     </div>
                 </div>
