--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <form action="addproduct.php" method="post">
+                        <form action="cart.php" method="post">
                             <input type="hidden" name="nameproduct" value="Áo đá bóng MU 2022">
                             <input type="hidden" name="price" value="199999">
-                            <input type="hidden" name="image" value="product-1.ipg">
+                            <input type="hidden" name="image" value="img/product-1.jpg">
                             <button type="submit" name="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                         </form>
                     </div>
@@ -225,10 +225,10 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <form action="addproduct.php" method="post">
+                        <form action="cart.php" method="post">
                             <input type="hidden" name="nameproduct" value="Áo đá bóng Liverpoll 2022">
                             <input type="hidden" name="price" value="199999">
-                            <input type="hidden" name="image" value="product-2.jpg">
+                            <input type="hidden" name="image" value="img/product-2.jpg">
                             <button type="submit" name="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                         </form>
                     </div>
@@ -247,10 +247,10 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <form action="addproduct.php" method="post">
+                        <form action="cart.php" method="post">
                             <input type="hidden" name="nameproduct" value="Áo đá bóng ManCity 2022">
                             <input type="hidden" name="price" value="199999">
-                            <input type="hidden" name="image" value="product-3.jpg">
+                            <input type="hidden" name="image" value="img/product-3.jpg">
                             <button type="submit" name="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                         </form>
                     </div>
@@ -269,10 +269,10 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <form action="addproduct.php" method="post">
+                        <form action="cart.php" method="post">
                             <input type="hidden" name="nameproduct" value="Áo đá bóng Riki xanh 2022">
                             <input type="hidden" name="price" value="199999">
-                            <input type="hidden" name="image" value="product-4.jpg">
+                            <input type="hidden" name="image" value="img/product-4.jpg">
                             <button type="submit" name="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                         </form>
                     </div>
@@ -291,10 +291,10 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <form action="addproduct.php" method="post">
+                        <form action="cart.php" method="post">
                             <input type="hidden" name="nameproduct" value="Áo đá bóng RIKI đỏ 2022">
                             <input type="hidden" name="price" value="199999">
-                            <input type="hidden" name="image" value="product-5.jpg">
+                            <input type="hidden" name="image" value="img/product-5.jpg">
                             <button type="submit" name="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                         </form>
                     </div>
@@ -313,10 +313,10 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <form action="addproduct.php" method="post">
+                        <form action="cart.php" method="post">
                             <input type="hidden" name="nameproduct" value="Áo đá bóng PSG 2022">
                             <input type="hidden" name="price" value="199999">
-                            <input type="hidden" name="image" value="product-6.jpg">
+                            <input type="hidden" name="image" value="img/product-6.jpg">
                             <button type="submit" name="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                         </form>
                     </div>
@@ -335,10 +335,10 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <form action="addproduct.php" method="post">
+                        <form action="cart.php" method="post">
                             <input type="hidden" name="nameproduct" value="Áo đá bóng Bayern Munich 2022">
                             <input type="hidden" name="price" value="199999">
-                            <input type="hidden" name="image" value="product-7.jpg">
+                            <input type="hidden" name="image" value="img/product-7.jpg">
                             <button type="submit" name="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                         </form>
                     </div>
@@ -357,10 +357,10 @@
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
                         <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Xem Thêm</a>
-                        <form action="addproduct.php" method="post">
+                        <form action="cart.php" method="post">
                             <input type="hidden" name="nameproduct" value="Áo đá bóng Bulbal hồng 2022">
                             <input type="hidden" name="price" value="199999">
-                            <input type="hidden" name="image" value="product-8.jpg">
+                            <input type="hidden" name="image" value="img/product-8.jpg">
                             <button type="submit" name="submit" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Thêm Vào Giỏ</button>
                         </form>
                     </div>
